# pysiral

./: .flake8  .gitignore  .mypy.ini  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  build-cythonized-bottleneck-functions-win.bat  patch.diff  pyproject.toml  readthedocs.yaml  requirements.txt  setup-bnfunc.py  setup.py
config/: area_def.yaml  auxdata_def.yaml  local_machine_def.yaml.example  mission_def.yaml  parameter_def.yaml  product_def.yaml
docs/: auxiliary_datasets.rst  checklist.rst  codingconv.rst  conf.py  configuration.rst  console_scripts.rst  contributing.rst  cookbook.rst  database.rst  from_python.rst  glossary.rst  index.rst  installation.rst  l1preproc.rst  l2preproc.rst  l2proc.rst  l3proc.rst  modules.rst  processors.rst  radar_altimeter_datasets.rst  requirements.txt  roadmap.rst  what_is_pysiral.rst  workflow.rst
pysiral/: PYSIRAL-CFG-LOC  VERSION  __init__.py  _class_template.py  _logger.py  auxdata.py  catalog.py  classifier.py  clocks.py  collection.py  config.py  cryosat2_l1b_msd_definition.py  datahandler.py  dot.py  errorhandler.py  filter.py  flag.py  frb.py  grid.py  helper.py  icechart.py  io_adapter.py  io_tools.py  iotools.py  job.py  l1bdata.py  l1bfile.py  l1bpreproc.py  l1data.py  l1preproc.py  l2data.py  l2preproc.py  l2proc.py  l3proc.py  legacy.py  logging.py  maptools.py  mask.py  mss.py  orbit.py  (+17 more)
sandbox/: constructCryoSatL1b.py  cryosat2_baselineb_waveform_parameter.py  cryosat2_to_l1bdata.py  cyfindpeaks.pyx  envisat_to_l1bdata.py  ers2_to_l1bdata.py  find_anomalous_frb_l2i.py  getconfig.py  grid_visualization_presentation.py  l2_processing.py  namedtuples.py  parse_cryosat_l1b.py  preproc_cryosat2.py  pyopengl_sphere.py  sentinel3_to_l1bdata.py  setup.py  sicci2_crdp_ice2snowfrb.py  test_class_representation.py  test_cryosat2_sin_bincount_reduction.py  test_l1bdata_from_nc.py  test_netcdf_write_in_loop.py  test_numba_tfmra.py  test_pandas_dataframe.py  test_sar_sarin_range_bias.py  test_smooth.py  test_sqlite3_file_database.py  test_tfmra_wrapper.py  test_write_netcdf_config.nc  test_write_netcdf_config.py  tfmra_wrapper.py  verify-osisaf-gridshift.py  yaml2treedict.py  yaml2treedict.yaml
scripts/: pip-python-modules-win64.txt
tests/: test_auxdata_classes.py  test_config.py  test_definition_files.py  test_l1_proc_def_files.py  test_l2_ouput_def_files.py  (+5 more)
(+736 files in other folders)
